CustomObjects/objects/invoiceit_s__Job_Product__c.object
<CustomObject>
    <description>The tier 1 of the product catalog linked to the Order.</description>
    <fields>
        <fullName>QTC__Description1__c</fullName>
        <description>Description for this line item.</description>
        <inlineHelpText>Description for this line item.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QTC__Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bundle_SequenceNumber__c</fullName>
        <label>Bundle Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Charges_without_a_Charge_Date__c</fullName>
        <label>Charges without a Charge Date</label>
        <summarizedField>invoiceit_s__Job_Rate_Plan__c.invoiceit_s__Charges_without_a_Charge_Date__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Job_Rate_Plan__c.invoiceit_s__Job_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Job__c</fullName>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Job_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Minimum_Next_Charge_Date_For_Product2__c</fullName>
        <label>Minimum Next Charge Date For Product</label>
        <summarizedField>invoiceit_s__Job_Rate_Plan__c.invoiceit_s__Minimum_Next_Charge_Date_For_Product3__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Job_Rate_Plan__c.invoiceit_s__Job_Product__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle</label>
        <referenceTo>invoiceit_s__Product_Bundle__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>invoiceit_s__Product__c</referenceTo>
        <relationshipName>Job_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>invoiceit_s__Job_Product__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__SequenceNumber__c</fullName>
        <label>Order Product Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Job_Rate_Plans__c</fullName>
        <label>Total Order Rate Plans</label>
        <summaryForeignKey>invoiceit_s__Job_Rate_Plan__c.invoiceit_s__Job_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Order Product</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>